--- a/frontend/src/components/home/styles.css
+++ b/frontend/src/components/home/styles.css
@@ -1,9 +1,7 @@
 /* Home.css */
 .home-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    gap: 2rem;
     height: 100vh;
     animation: fadeIn 1s ease-in-out;
 }
@@ -17,6 +15,10 @@
 }
 
 .logout-button {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 2rem;
     background-color: #D20B34;
     color: white;
     padding: 10px 20px;
