feat : Add filter and sort functionnality

--- a/frontend/src/components/home/styles.css
+++ b/frontend/src/components/home/styles.css
@@ -14,6 +14,10 @@
 }
 
 .logout-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 2rem;
     background-color: #D20B34;
     color: white;
     padding: 10px 20px;
